@@ -1,0 +1,3 @@
+def raise_if_zero(arg):
+    if not arg:
+        raise IndexError("arg wasn't there")
