@@ -2,6 +2,7 @@ Version 0.7.4
 =============
 
 * Fixed segmentation fault occurring occasionally during installation of jpy (issue #40)
+* Improved Java exception messages on Python errors (issue #39)
 
 Version 0.7.3
 =============
